# btx-common

./: .gitmodules  CMakeLists.txt
common/: EngineConfig.cpp  EngineConfig.hpp  GameMetadata.cpp  GameMetadata.hpp  Precompiled.hpp
common/assetmanager/: IModel.hpp  ModelUtilities.cpp  ModelUtilities.hpp  RenderData.cpp  RenderData.hpp
common/console/: CVar.cpp  CVar.hpp
common/core/: IWindow.hpp
common/interfaces/: IConsole.hpp  IConsoleListener.hpp  ICore.hpp  IEngine.hpp  IFileSystem.hpp  IInput.hpp  IMaterialManager.hpp  IModelManager.hpp  IPluginSystem.hpp  IRenderFrontend.hpp
common/interfaces/plugins/: IApplication.hpp  IPlugin.hpp  IRenderFrontend.hpp
common/pluginsystem/: PluginLibrary.cpp  PluginLibrary.hpp  PluginLibraryMetadata.cpp  PluginLibraryMetadata.hpp  PluginList.hpp
common/rendering/: Common.hpp  IRenderBatch.hpp  IRenderEntity.hpp  IRenderLight.hpp  IRenderModel.hpp  IRenderTexture.hpp  IRenderView.hpp  IRenderVolume.hpp
